--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,6 +19,22 @@
 </head>
 <body>
 
+  <nav>
+
+    <div class="brand"><a href="/">Skills</a></div>
+
+    <ul>
+      <% if current_user %>
+        <li><a id="sign-out" href="/sessions/<%= current_user.id %>">Sign Out</a></li>
+      <% else %>
+        <li>Sign In</a></li>
+        <li>Sign Up</a></li>
+      <% end %>
+    </ul>
+
+  </nav>
+
+
   <%= yield %>
 </body>
 </html>
