fix sessions and user log in sign up authorization

--- a/app/views/sign_in.erb
+++ b/app/views/sign_in.erb
@@ -1,13 +1,11 @@
 <div class="container">
   <h1>Sign In</h1>
 
-  <% if @error %>
-    <div class="errors"><%= @error %></div>
-  <% end %>
+  <%= @error %>
 
   <form id="sign-in" method="post" action="/sessions">
     <label class="label" for="email">Email</label>
-    <input type="email" name="email" placeholder="e.g., me@example.com" value="<%= @email %>"><br>
+    <input type="email" name="email" placeholder="e.g., me@example.com" value="<%= @user.email %>"><br>
     <label class="label" for="password">Password</label>
     <input type="password" name="password" placeholder="6 or more characters">
     <br>
