--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,23 +17,18 @@
 
   <title></title>
 </head>
+
+
 <body>
 
   <nav>
-
-    <div class="brand"><a href="/">Skills</a></div>
-
-    <ul>
-      <% if current_user %>
-        <li><a id="sign-out" href="/sessions/<%= current_user.id %>">Sign Out</a></li>
+      <% if current_user.nil? %>
+        <a class="sessions_link" id="sign-in" href="/sessions/new">Sign In</a>
+        <a class="sessions_link" id="sign-up" href="/users/new">Sign Up</a>
       <% else %>
-        <li>Sign In</a></li>
-        <li>Sign Up</a></li>
+        <a class="sessions_link" id="sign-out" href="/sessions/<%= current_user.id %>">Sign Out</a></li>
       <% end %>
-    </ul>
-
   </nav>
-
 
   <%= yield %>
 </body>
