--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -1,11 +1,34 @@
 <h1 id="heading"><%= params[:cuisine] %> Restaurants in <%= params[:neighborhood] %></h1>
+<!-- DRAG AND DROP CONTAINERS
+<div class="gold_list_container">
+
+</div>
+<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+<br>
+<img id="drag1" src="http://choc.convio.net/images/content/pagebuilder/yelp_logo_no_outline_color.jpg" draggable="true" ondragstart="drag(event)" width="336" height="69">
+ -->
+<div class="trash_list_container">
+</div>
 <div class="results_container">
   <% @businesses.each do |business|%>
-    <div class="restaurant_container"
-      <ul>
-        <li><%= business.name %></li>
-        <p class="restaurant_img"><img src="<%= business.image_url%>"></p>
-      </ul>
+    <div class="restaurant_container" draggable="true">
+      <table>
+        <tr id="restaurant_row">
+          <td id="restaurant_column">
+            <a id="left-arrow" href="/lists/trash"><img src="/imgs/arrow_left_2x.png"></a>
+          </td>
+          <td id="restaurant_column">
+            <a class="restaurant_name" href="<%= business.url %>"><%= business.name %></a>
+            <br>
+            <img class="restaurant_img" src="<%= business.image_url%>">
+            <br>
+            <img class="restaurant_rating" src="<%= business.rating_img_url %>">
+          </td>
+          <td id="restaurant_column">
+            <a id="right-arrow" href="/lists/gold"><img src="/imgs/arrow_right_2x.png"></a>
+          </td>
+        </tr>
+      </table>
     </div>
   <% end %>
 </div>
