--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -1,4 +1,6 @@
-<h1 id="heading"><%= params[:cuisine] %> Restaurants in <%= params[:neighborhood] %></h1>
+<div id="title">
+<h1><%= params[:cuisine] %> Restaurants in <%= params[:neighborhood] %></h1>
+</div>
 <!-- DRAG AND DROP CONTAINERS
 <div class="gold_list_container">
 
@@ -7,13 +9,19 @@
 <br>
 <img id="drag1" src="http://choc.convio.net/images/content/pagebuilder/yelp_logo_no_outline_color.jpg" draggable="true" ondragstart="drag(event)" width="336" height="69">
  -->
-<div class="trash_list_container">
+<div id="lists">
+  <div class="trash_list_container">
+    <p>TRASH TRASH TRASH</p>
+  </div>
+  <div class="gold_list_container">
+    <p>GOLD GOLD GOLD</p>
+  </div>
 </div>
 <div class="results_container">
   <% @businesses.each do |business|%>
     <div class="restaurant_container" draggable="true">
       <table>
-        <tr id="restaurant_row">
+        <tr id="restaurant_row" data-cuisine="<%=params[:cuisine]%>" data-neighborhood="<%=params[:neighborhood]%>">
           <td id="restaurant_column">
             <a id="left-arrow" href="/lists/trash"><img src="/imgs/arrow_left_2x.png"></a>
           </td>
