move api keys to env file

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,6 +12,8 @@
   -->
   <link rel="stylesheet" href="/css/application.css">
 
+    <link href='http://fonts.googleapis.com/css?family=Noto+Serif|Lobster|Pacifico|Playball|Satisfy&effect=outline' rel='stylesheet' type='text/css'>
+
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
@@ -20,7 +22,6 @@
 
 
 <body>
-
   <nav>
       <% if current_user.nil? %>
         <a class="sessions_link" id="sign-in" href="/sessions/new">Sign In</a>
